# kenjaku

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  otel-config.yaml
.claude/skills/rebuild-docker/: SKILL.md
.claude/skills/refresh-dev-token/: SKILL.md
.claude/skills/regression/: SKILL.md
.github/workflows/: ci.yml
.semgrep/: tenant-scope.yml
.semgrep/test/: README.md  bad_get_by_id_no_tenant.rs  bad_missing_tenant.rs  good_with_tenant_bind.rs  good_with_tenant_in_sql.rs
cloudflared/: config.yml
config/: .gitignore  base.yaml  docker.yaml  local.yaml  production.yaml  secrets.docker.yaml.example  secrets.example.yaml  staging.yaml
crates/kenjaku-api/: Cargo.toml
crates/kenjaku-api/src/: lib.rs  router.rs
crates/kenjaku-api/src/dto/: auth.rs  request.rs  response.rs
crates/kenjaku-api/src/extractors/: locale.rs  mod.rs  tenant.rs
crates/kenjaku-api/src/handlers/: admin_users.rs  auth.rs  autocomplete.rs  feedback.rs  health.rs  mod.rs  search.rs  top_searches.rs
crates/kenjaku-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs  require_admin.rs
crates/kenjaku-api/tests/: auth_flow.rs  login_flow.rs  tenant_isolation.rs
crates/kenjaku-core/: Cargo.toml
crates/kenjaku-core/src/: config.rs  error.rs  lib.rs
crates/kenjaku-core/src/prompts/: classify_intent.md  generate_merged.md  mod.rs  preprocess.md  source_rules_with_web_tool.md  source_rules_without_web_tool.md  suggest.md  system_instruction.md  translate.md
crates/kenjaku-core/src/traits/: brain.rs  classifier.rs  clusterer.rs  collection.rs  embedding.rs  generator.rs  intent.rs  llm.rs  mod.rs  pipeline.rs  retriever.rs  tool.rs  translator.rs  web_search.rs
crates/kenjaku-core/src/types/: assets.rs  component.rs  conversation.rs  feedback.rs  intent.rs  locale.rs  message.rs  mod.rs  preprocess.rs  search.rs  suggestion.rs  tenant.rs  tool.rs  trending.rs  usage.rs
crates/kenjaku-infra/: Cargo.toml
crates/kenjaku-infra/src/: lib.rs  title_resolver.rs
crates/kenjaku-infra/src/auth/: jwt.rs  mod.rs
crates/kenjaku-infra/src/clustering/: mod.rs
crates/kenjaku-infra/src/embedding/: mod.rs  openai.rs
crates/kenjaku-infra/src/llm/: claude.rs  gemini.rs  mod.rs
crates/kenjaku-infra/src/postgres/: conversation.rs  default_suggestions.rs  feedback.rs  mod.rs  pool.rs  refresh_batches.rs  tenants.rs  trending.rs  users.rs
crates/kenjaku-infra/src/qdrant/: client.rs  mod.rs
crates/kenjaku-infra/src/redis/: client.rs  locale_memory.rs  mod.rs
crates/kenjaku-infra/src/telemetry/: mod.rs  tracing.rs
crates/kenjaku-infra/src/web_search/: brave.rs  mod.rs
crates/kenjaku-ingest/: Cargo.toml
crates/kenjaku-ingest/src/: chunker.rs  crawler.rs  main.rs  parser.rs  pipeline.rs
crates/kenjaku-server/: Cargo.toml
crates/kenjaku-server/src/: main.rs
crates/kenjaku-service/: Cargo.toml
crates/kenjaku-service/src/: autocomplete.rs  component.rs  conversation.rs  intent.rs  lib.rs  locale_memory.rs  quality.rs  refresh_worker.rs  reranker.rs  retriever.rs  search.rs  suggestion.rs  translation.rs  trending.rs
crates/kenjaku-service/src/brain/: assembler.rs  composite.rs  generator.rs  intent.rs  mod.rs  prompt.rs  translation.rs
crates/kenjaku-service/src/foundation/: mod.rs  suggestion.rs  trending.rs
crates/kenjaku-service/src/foundation/worker/: mod.rs  suggestion.rs  trending.rs
crates/kenjaku-service/src/harness/: component.rs  context.rs  fanout.rs  mod.rs
crates/kenjaku-service/src/pipelines/: mod.rs  single_pass.rs
crates/kenjaku-service/src/session/: autocomplete.rs  conversation.rs  feedback.rs  history.rs  locale_memory.rs  mod.rs
crates/kenjaku-service/src/tools/: brave_web.rs  config.rs  doc_rag.rs  faq.rs  mod.rs  rag.rs
crates/kenjaku-service/src/worker/: mod.rs  trending.rs
docs/: architect.html  architect.md  default-suggestions-locale.md
docs/architecture/: flexibility-refactor-tech-spec.md  layered-refactor-plan.html  layered-refactor.md
geto-web/: Dockerfile  app.js  index.html  nginx.conf  styles.css
geto-web/test/: auth.smoke.html
migrations/: 20260407000001_feedback_unique.down.sql  20260407000001_feedback_unique.up.sql  20260408000001_default_suggestions.down.sql  20260408000001_default_suggestions.up.sql  20260408000002_refresh_batches_single_active.down.sql  20260408000002_refresh_batches_single_active.up.sql  20260415000001_add_tenant_id.down.sql  20260415000001_add_tenant_id.up.sql  20260415000002_feedback_tenant_unique.down.sql  20260415000002_feedback_tenant_unique.up.sql  20260416000001_tenant_id_not_null.down.sql  20260416000001_tenant_id_not_null.up.sql  20260421000001_add_users.down.sql  20260421000001_add_users.up.sql
migrations/20260406000001_initial/: down.sql  up.sql
migrations/20260406000002_conversations/: up.sql
scripts/: generate-dev-keypair.sh  ingest_folder.sh  ingest_url.sh  mint-dev-jwt.sh
scripts/smoke/: two_call_pipeline_smoke.py
