[workspace]
resolver = "2"
members = [
    "crates/kenjaku-core",
    "crates/kenjaku-infra",
    "crates/kenjaku-service",
    "crates/kenjaku-api",
    "crates/kenjaku-server",
    "crates/kenjaku-ingest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sam Wang <sam.wang@example.com>"]
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "propagate-header", "limit", "timeout"] }
governor = "0.8"
tower_governor = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
qdrant-client = "1"

# Config
config = "0.15"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Document parsing
scraper = "0.22"
pulldown-cmark = "0.12"

# Progress
indicatif = "0.17"

# Testing
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"

# SSE
eventsource-stream = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
