[package]
name = "kenjaku-api"
version.workspace = true
edition.workspace = true

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
kenjaku-infra = { path = "../kenjaku-infra" }
kenjaku-service = { path = "../kenjaku-service" }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
tower_governor = { workspace = true }
http = "1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
