[package]
name = "kenjaku-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"
