[package]
name = "kenjaku-infra"
version.workspace = true
edition.workspace = true

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }

# Clustering for the SuggestionRefreshWorker. Pinned versions to keep
# linfa <-> ndarray ABI aligned (linfa-clustering 0.7 requires ndarray
# 0.15.x; mixing 0.16 breaks compilation).
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
# linfa 0.7 internally uses rand 0.8; pin to match the StdRng/SeedableRng
# the LinfaClusterer passes via `KMeans::params_with_rng`.
rand = "0.8"

# Telemetry
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
tempfile = "3"
