[package]
name = "kenjaku-infra"
version.workspace = true
edition.workspace = true

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }

# Clustering for the SuggestionRefreshWorker. Pinned versions to keep
# linfa <-> ndarray ABI aligned (linfa-clustering 0.7 requires ndarray
# 0.15.x; mixing 0.16 breaks compilation).
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
# linfa 0.7 internally uses rand 0.8; pin to match the StdRng/SeedableRng
# the LinfaClusterer passes via `KMeans::params_with_rng`.
rand = "0.8"

# Telemetry
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Auth / JWT (Phase 3c.1). Pinned to 10.3 — current latest stable, MSRV
# 1.85 (<= our 1.88). Constant-time signature compare is provided by the
# crate's `decode` entry point; we never roll our own crypto. Default
# `use_pem` feature covers both RSA and EC public-key PEM loading.
#
# `aws_lc_rs` backend: FIPS-capable, aligns with rustls's default and
# the broader Rust-at-scale security ecosystem. Chosen over
# `rust_crypto` because Crypto.com operates under regulated-fintech
# constraints and the AWS-maintained backend is the more-audited option.
# v10 requires exactly one backend feature; mutually exclusive.
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
tempfile = "3"
# Test-only: forging well-formed + malformed tokens against a fixed
# keypair. `jsonwebtoken`'s `encode` path is pulled in transitively via
# the main dep, but base64 is needed for hand-crafting algorithm-
# confusion + alg:none adversarial tokens that `encode` refuses to mint.
base64 = "0.22"
