[package]
name = "kenjaku-infra"
version.workspace = true
edition.workspace = true

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }

# Clustering for the SuggestionRefreshWorker. Pinned versions to keep
# linfa <-> ndarray ABI aligned (linfa-clustering 0.7 requires ndarray
# 0.15.x; mixing 0.16 breaks compilation).
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
# linfa 0.7 internally uses rand 0.8; pin to match the StdRng/SeedableRng
# the LinfaClusterer passes via `KMeans::params_with_rng`.
rand = "0.8"

# Telemetry
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Auth / JWT (Phase 3c.1). MSRV-compatible 10.x; exact version pinned
# via Cargo.lock. The caret range ("10.3") deliberately allows semver-
# compatible patch bumps so cargo-audit-driven CVE fixes land without
# a Cargo.toml edit, while Cargo.lock keeps day-to-day builds
# reproducibly on the same byte-for-byte compiled crate. Pinning to
# `=10.3.0` here would trade automatic CVE-patch uptake for a form of
# pinning Cargo.lock already provides.
#
# jsonwebtoken 10.x requires Rust 1.85 (<= our 1.88). Constant-time
# signature compare is provided by the crate's `decode` entry point;
# we never roll our own crypto. Default `use_pem` feature covers both
# RSA and EC public-key PEM loading.
#
# `aws_lc_rs` backend: FIPS-capable, aligns with rustls's default and
# the broader Rust-at-scale security ecosystem. Chosen over
# `rust_crypto` because Crypto.com operates under regulated-fintech
# constraints and the AWS-maintained backend is the more-audited option.
# v10 requires exactly one backend feature; mutually exclusive.
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

# Password hashing for the users repo (argon2id via PHC string). See
# workspace Cargo.toml for rationale. `argon2` re-exports the
# `password-hash` traits we need for hash + verify.
argon2 = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
tempfile = "3"
# Test-only: the unit tests generate a fresh RSA-2048 keypair at
# runtime via seeded RNG (~200ms, amortized via `OnceLock`).
# Migrated from a hardcoded PEM pair post-PR #17 (Copilot #5 CWE-798
# signal). `rand` is already in prod-deps for the LinfaClusterer;
# `rsa 0.9` is already transitively in `Cargo.lock`, so zero net-new
# supply-chain vet. base64 is still needed for hand-crafting
# algorithm-confusion + alg:none adversarial tokens that
# `jsonwebtoken::encode` refuses to mint.
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
