[package]
name = "kenjaku-ingest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kenjaku-ingest"
path = "src/main.rs"

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
kenjaku-infra = { path = "../kenjaku-infra" }
kenjaku-service = { path = "../kenjaku-service" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
pulldown-cmark = { workspace = true }
tiktoken-rs = { workspace = true }
chrono = { workspace = true }
html2md = { workspace = true }
indicatif = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
tempfile = "3"
