[package]
name = "kenjaku-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kenjaku-server"
path = "src/main.rs"

[dependencies]
kenjaku-core = { path = "../kenjaku-core" }
kenjaku-infra = { path = "../kenjaku-infra" }
kenjaku-service = { path = "../kenjaku-service" }
kenjaku-api = { path = "../kenjaku-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
# JWT public-key fingerprint hashing for the audit log + the
# `sha256_first_8` helper. Both crates are already transitively in
# Cargo.lock via aws-lc-rs / jsonwebtoken / qdrant-client, so zero
# net-new supply chain.
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
